manifests/ingresses/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - docker-example.cascade.rocks
    secretName: certificate-prod
  rules:
  - host: docker-example.cascade.rocks
    http:
      paths:
      - path: /
        backend:
          serviceName: client
          servicePort: 80
      - path: /api
        backend:
          serviceName: server
          servicePort: 8080
